Wed Sep 13 00:35:57 CEST 2006 (tk)
----------------------------------
  * configure: add -lresolv to CLAMAV_MILTER_LIBS, patch from Stephen Gran

Wed Sep 13 00:03:30 CEST 2006 (acab)
------------------------------------
  * libclamav: Merge of the html normaliser part of the phishing module from
               Torok Edvin <edwintorok*gmail.com>
               Part of the Google Summer of Code program

Tue Sep 12 22:52:14 CEST 2006 (tk)
----------------------------------
  * clamd: apply w32 patches from NJH

Tue Sep 12 21:59:17 CEST 2006 (acab)
------------------------------------
  * libclamav: Merge of the related part of the phishing module from
               Torok Edvin <edwintorok*gmail.com>
	       Part of the Google Summer of Code program

Tue Sep 12 20:42:04 CEST 2006 (acab)
------------------------------------
  * sigtool: Merge of the related part of the phishing module from
             Torok Edvin <edwintorok*gmail.com>
             Part of the Google Summer of Code program
  * libclamav: Initial merge of the phishing module - inactive

Tue Sep 12 01:04:39 CEST 2006 (tk)
----------------------------------
  * clamd, clamdscan: add support for hardware acceleration
  * etc/clamd.conf: add HardwareAcceleration option
  * clamd: add MULTISCAN command (for scanning directories with multiple threads)

Sun Sep 10 22:40:20 BST 2006 (njh)
----------------------------------
  * clamav-milter:	Fix possible underrun in load balanced configurations

Tue Sep  5 22:43:26 CEST 2006 (tk)
----------------------------------
  * clamd: code cleanup

Tue Sep  5 00:23:26 CEST 2006 (tk)
----------------------------------
  * clamd: all commands can be now prefixed with the letter 'n' (eg. nSCAN) to
	   to indicate that they will be delimited by a new line character
	   (which assures that the complete command and its entire argument
	   will be processed as a single command)
	   Patch from Mark Pizzolato <clamav-devel*subscriptions.pizzolato.net>
